# portfolio-rebalancer

./: .gitignore  CLAUDE.md  HUMAN_THINKED_PROCESS.md  README.md  cli.py  pyproject.toml
.claude/: settings.local.json
plans/: 001_implementation_plan.md
prompts/: 001_initial_design.md
src/: __init__.py  config.py  loaders.py  models.py  portfolio.py
src/optimizers/: __init__.py  base.py  simple.py  tracking_error.py  trade_minimization.py
src/scrapers/: __init__.py  base.py  fintual.py
tests/: test_optimizers.py  test_portfolio.py  test_scrapers.py
