[project]
name = "portfolio-rebalancer"
version = "0.1.0"
description = "A tool for calculating buy/sell orders to rebalance stock portfolios"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
