[project]
name = "portfolio-rebalancer"
version = "0.1.0"
description = "A tool for calculating buy/sell orders to rebalance stock portfolios"
requires-python = ">=3.10"
dependencies = ["scipy>=1.11", "playwright>=1.40"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
